답변 수정 삭제 작업 및 추천 기능 구현